<resources>
    <string name="app_name">Tour Guide App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_museum">Museum</string>
    <string name="tab_food">Food</string>
    <string name="tab_drink">Drink</string>
    <string name="tab_hotel">Hotel</string>
    <string name="name_maritime">National Maritime Museum</string>
    <string name="name_cutty_sark">Cutty Sark</string>
    <string name="name_oberavtory">Royal Observatory Greenwich</string>
    <string name="name_queen">Queen\'s House</string>
    <string name="name_ranger">Ranger\'s House</string>
    <string name="name_old_college">Old Royal Naval College</string>
    <string name="name_planetarium">Peter Harrison Planetarium</string>
    <string name="name_prime">Prime Meridian</string>
    <string name="name_painted">Painted Hall</string>
    <string name="name_alfege">St Alfege Church</string>
    <string name="museum_tel_maritime">0208 000001</string>
    <string name="museum_tel_cutty_sark">0208 000002</string>
    <string name="museum_tel_oberavtory">0208 000003</string>
    <string name="museum_tel_queen">0208 000004</string>
    <string name="museum_tel_ranger">0208 000005</string>
    <string name="museum_tel_old_college">0208 000006</string>
    <string name="museum_tel_planetarium">0208 000007</string>
    <string name="museum_tel_prime">0208 000008</string>
    <string name="museum_tel_painted">0208 000009</string>
    <string name="museum_tel_alfege">0208 000010</string>
    <string name="address_museum_maritime">Romney Rd, London, SE10 9NF</string>
    <string name="address_museum_cutty_sark">King William Walk, London, SE10 9HT</string>
    <string name="address_museum_oberavtory">Blackheath Ave, London, SE10 8XJ</string>
    <string name="address_museum_queen">Romney Rd, London SE10 9NF</string>
    <string name="address_museum_ranger">Chesterfield Walk, London SE10 8QX</string>
    <string name="address_museum_old_college">King William Walk, London SE10 9NN</string>
    <string name="address_museum_planetarium">Blackheath Ave, London SE10 8XJ</string>
    <string name="address_museum_prime">London SE10 8XJJ</string>
    <string name="address_museum_painted">College Way, London SE10 9NN</string>
    <string name="address_museum_alfege">Greenwich Church St, London SE10 9BJ</string>
    <string name="website_museum_maritime">https://www.rmg.co.uk/national-maritime-museum</string>
    <string name="website_museum_cutty_sark">https://www.rmg.co.uk/cutty-sark</string>
    <string name="website_museum_oberavtory">https://www.rmg.co.uk/royal-observatory</string>
    <string name="website_museum_queen">https://www.rmg.co.uk/queens-house</string>
    <string name="website_museum_ranger">https://www.english-heritage.org.uk/visit/places/rangers-house-the-wernher-collection</string>
    <string name="website_museum_old_college">https://ornc.org/</string>
    <string name="website_museum_planetarium">https://www.rmg.co.uk/whats-on/planetarium-shows</string>
    <string name="website_museum_prime">https://www.rmg.co.uk/stories/topics/what-prime-meridian-why-it-greenwich</string>
    <string name="website_museum_painted">https://ornc.org/our-story/royal-hospital/painted-hall/</string>
    <string name="website_museum_alfege">http://www.st-alfege.org.uk/</string>
    <string name="about_maritime">
	Royal Museums Greenwich holds over 2.5 million items, including astronomical and navigational
        instruments, ship models and plans, coins, medals and flags, uniforms and weapons,
        plus historical art, film and photography. The National Maritime Museum also contains the
        world\'s largest maritime library and archive collection.
</string>
    <string name="about_cutty_sark">
	Cutty Sark, the celebrated historic sailing ship and fastest of its time. Now an award-winning
        visitor attraction in Greenwich, London.
</string>
    <string name="about_oberavtory">
	The observatory was commissioned in 1675 by King Charles II. It is the home of Greenwich Mean
        Time (GMT), the Prime Meridian of the world
</string>
    <string name="about_queen">
	A former royal residence built between 1616. Home to an internationally renowned art collection
        , Inigo Jones\’ architectural masterpiece is the first Classical building in the UK.
</string>
    <string name="about_ranger">
	Ranger\’s House is an elegant Georgian villa on the boundary of Greenwich Park and Blackheath
        which houses The Wernher Collection, a world-class art collection amassed by the
        19th-century businessman, Sir Julius Wernher.
</string>
    <string name="about_old_college">
	The Old Royal Naval College is the architectural centrepiece of Maritime Greenwich, built
        between 1696 and 1712, a World Heritage Site described UNESCO as being of \"outstanding
        universal value\" and reckoned to be the \"finest and most dramatically sited architectural
        and landscape ensemble in the British Isles\".
</string>
    <string name="about_planetarium">
	Join Royal Observatory astronomers and leading scientists on a fascinating journey into space,
        from planetarium shows and science sessions for kids to in-depth astronomy courses and
        community events.
</string>
    <string name="about_painted">
	The Painted Hall is a true masterpiece, boasting one of the most spectacular Baroque interiors
        in Europe. The extraordinary ceiling and wall decorations were conceived and executed by
        British artist Sir James Thornhill. The epic painting scheme, known as \‘Britain\’s Sistine
        Chapel\’ took nineteen years from the start of the commission to its completion in 1726.
</string>
    <string name="about_prime">
	A meridian is a north-south line, selected as the zero reference line for astronomical
        observations. By comparing thousands of observations taken from the same meridian it\'s
        possible to build up an accurate map of the sky
</string>
    <string name="about_alfege">
	St Alfege Church begins in 1012, when Danish warriors killed a hostage they had taken during
        their raid on Canterbury. The murder of Alfege, Archbishop of Canterbury, here in Greenwich
        led to the building of the first church. the medieval church was replaced in 1718.
</string>
    <string name="name_travelodge">Travelodge</string>
    <string name="name_novotel">Novotel</string>
    <string name="name_bird_nest">The Birds Nest</string>
    <string name="name_innkeeper">Innkeeper\'s Collection</string>
    <string name="name_ibis">ibis</string>
    <string name="name_doubleTreee">DoubleTree</string>
    <string name="name_chris_inn">St Christopher\'s Inn</string>
    <string name="name_deveonport">De Vere Devonport House</string>
    <string name="name_premier_inn">Premier Inn</string>
    <string name="name_clarendon">The Clarendon</string>
    <string name="address_hotel_travelodge">Greenwich High Road, Greenwich High Rd, London SE10 8JA</string>
    <string name="address_hotel_novotel">173\-185 Greenwich High Rd, London SE10 8JA</string>
    <string name="address_hotel_bird_nest">32 Deptford Church St, London SE8 4RZ</string>
    <string name="address_hotel_innkeeper">The Mitre, 291 Greenwich High Rd, London SE10 8NA</string>
    <string name="address_hotel_ibis">30 Stockwell St, London SE10 9JN</string>
    <string name="address_hotel_doubleTreee">Catherine Grove, London SE10 8BB</string>
    <string name="address_hotel_chris_inn">189 Greenwich High Rd, London SE10 8JA</string>
    <string name="address_hotel_deveonport">King William Walk, London SE10 9JW</string>
    <string name="address_hotel_premier_inn">T1\-13 Lewisham High St, London SE13 5AF</string>
    <string name="address_hotel_clarendon">Montpelier Row, Blackheath, London SE3 0RW</string>
    <string name="hotel_tel_travelodge">0208 000301</string>
    <string name="hotel_tel_novotel">0208 000302</string>
    <string name="hotel_tel_bird_nest">0208 000303</string>
    <string name="hotel_tel_innkeeper">0208 000304</string>
    <string name="hotel_tel_ibis">0208 000305</string>
    <string name="hotel_tel_doubleTreee">0208 000306</string>
    <string name="hotel_tel_chris_inn">0208 000307</string>
    <string name="hotel_tel_deveonport">0208 000308</string>
    <string name="hotel_tel_premier_inn">0208 000309</string>
    <string name="hotel_tel_clarendon">0208 000310</string>
    <string name="website_hotel_travelodge">https://www.travelodge.co.uk/hotels/594/London-Greenwich-High-Road-hotel</string>
    <string name="website_hotel_novotel">https://all.accor.com/hotel/3476/index.en.shtml</string>
    <string name="website_hotel_bird_nest">http://www.thebirdsnestpub.co.uk</string>
    <string name="website_hotel_innkeeper">https://www.innkeeperslodge.com/hotel/the-mitre-greenwich-london</string>
    <string name="website_hotel_ibis">https://www.guestreservations.com/ibis-london-greenwich/booking</string>
    <string name="website_hotel_doubleTreee">https://www.hilton.com/en/hotels/longwdi-doubletree-london-greenwich/</string>
    <string name="website_hotel_chris_inn">https://www.st-christophers.co.uk/london/greenwich-hostel</string>
    <string name="website_hotel_deveonport">https://www.devere.co.uk/grand-connaught-rooms/</string>
    <string name="website_hotel_premier_inn">https://www.premierinn.com/gb/en/hotels/england/greater-london/london/london-lewisham.html</string>
    <string name="website_hotel_clarendon">https://www.clarendonhotel.com/</string>
    <string name="about_hotel_travelodge">
	The hotel is surrounded by must-see attractions like the Cutty Sark and beautiful Greenwich Park.
        A stone\'s throw from Greenwich Station and the DLR, it\'s also ideal for exploring the city
        centre.
</string>
    <string name="about_hotel_novotel">
	the stylish elegance of the Novotel London Greenwich hotel, which features bright, spacious
        bedrooms and colourful artwork throughout. Neighbouring Greenwich tube station, the 4-star
        hotel is a great choice for travellers interested in live music, riverside walks and nightlife.
        This modern hotel offers private on-site parking and boasts a fitness centre, a stylish
        restaurant, and spacious bedrooms.


</string>
    <string name="about_hotel_birds_nest">
	TThe Birds Nest has evolved into a fantastic, international music and arts venue while retaining
        its original South London flavour. Located at the end of Creekside and on the borders of
        Greenwich and Deptford
</string>
    <string name="about_hotel_innkeeper">
	Conveniently located near the Thames in the heart of the world heritage site of Greenwich,
        The Mitre should be your first port of call if you’re looking for the best value
        accommodation in central London, without compromising on comfort or style
</string>
    <string name="about_hotel_ibis">
	Relax with a drink in our stylish 24hr lobby bar, stay connected with free fibre Wi-Fi
        throughout the building, and tuck into a filling breakfast (cooked breakfast with several
        options or a fresh continental spread - the choice is yours) each morning at the linked
        Café Rouge. ibis London Greenwich merges a great location with all the necessary comforts,
        so that you enjoy a relaxing break at budget-friendly prices.
</string>
    <string name="call">Call</string>
    <string name="share">Share</string>
    <string name="website">Website</string>
    <string name="directions">Directions</string>
    <string name="about">About</string>
</resources>